fixed errors, update code

--- a/config.yaml
+++ b/config.yaml
@@ -1,13 +1,8 @@
 kafka:
   brokers:
     - "localhost:9092"
-
   topic: "first-topic"
-
   producer:
     success_return: true
-
   consumer:
-    success_return: true
-
-
+    return_errors: true
